fixed spacing for mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -435,6 +435,7 @@ body {
 @media (max-width:500px) {
   .top_info_box {
     padding: 1rem 0;
+    margin-top: 1rem;
   }
 }
 .top_header h1 {
