--- a/less/home-page.less
+++ b/less/home-page.less
@@ -56,5 +56,6 @@
   }
   @media @mobile {
     padding: 1rem 0;
+    margin-top: 1rem;
   }
 }
